--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,15 +10,17 @@
 
 .formGrid{
   display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-  gap: 12px;
+  grid-template-columns: repeat(4, minmax(180px, 1fr));
+  gap: 12px 16px;
   align-items: end;
+
 }
 
 .formGrid label{
-  display: grid;
+  display: flex;
   gap: 6px;
   font-size: 14px;
+  flex-direction: column;
 }
 
 .formGrid select{
@@ -29,6 +31,8 @@
 }
 
 .btn{
+  height: 40px;
+  align-self: end;
   padding: 10px 14px;
   border-radius: 10px;
   border: 1px solid #ddd;
@@ -194,7 +198,7 @@
 
 @media (max-width: 900px) {
   .teams-grid {
-    grid-template-columns: repeat(2, minmax(140px, 1fr));
+    grid-template-columns: repeat(2, minmax(180px, 1fr));
   }
 }
 
